// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update migrate packages adds introduced packages when their imports appear but they are missing: package.json 1`] = `
{
  "0. Before": "
             {
                 "dependencies": {
                    "@angular/core": "~19.0.0",
                    "@taiga-ui/cdk": "5.0.1",
                    "@taiga-ui/core": "5.0.1"
                 }
             }
            ",
  "1. After": "
             {
                 "dependencies": {
                    "@angular/core": "~19.0.0",
                    "@ng-web-apis/platform": "^5.0.0",
                    "@taiga-ui/cdk": "5.0.1",
                    "@taiga-ui/core": "5.0.1",
                    "@taiga-ui/editor": "^5.4.0"
                 }
             }
            ",
}
`;

exports[`ng-update migrate packages adds introduced packages when their imports appear but they are missing: test.ts 1`] = `
{
  "0. Before": "
                import {tuiHexToRgb, TUI_IS_TOUCH} from '@taiga-ui/cdk';

                export class Test {
                    protected readonly rgb = tuiHexToRgb;
                    protected readonly touch = TUI_IS_TOUCH;
                }
            ",
  "1. After": "import { tuiHexToRgb } from "@taiga-ui/editor";
// TODO: (Taiga UI migration) TUI_IS_TOUCH was renamed to WA_IS_TOUCH from @ng-web-apis/platform, which is a Signal<boolean> (the old token was a plain boolean), so read it with a call: inject(WA_IS_TOUCH)().
import { WA_IS_TOUCH } from "@ng-web-apis/platform";

                export class Test {
                    protected readonly rgb = tuiHexToRgb;
                    protected readonly touch = WA_IS_TOUCH;
                }
            ",
}
`;

exports[`ng-update migrate packages update packages from v4: package.json 1`] = `
{
  "0. Before": "
             {
                 "dependencies": {
                    "@angular/core": "~19.0.0",
                    "@maskito/angular": "3.11.1",
                    "@maskito/core": "3.11.1",
                    "@maskito/kit": "3.11.1",
                    "@ng-web-apis/common": "4.0.0",
                    "@ng-web-apis/intersection-observer": "4.0.0",
                    "@ng-web-apis/mutation-observer": "4.0.0",
                    "@ng-web-apis/screen-orientation": "4.0.0",
                    "@ng-web-apis/resize-observer": "4.0.0",
                    "@ng-web-apis/universal": "4.0.0",
                    "@taiga-ui/cdk": "5.0.1",
                    "@taiga-ui/core": "5.0.1",
                    "@taiga-ui/icons": "5.0.1",
                    "@taiga-ui/dompurify": "4.0.0",
                    "@taiga-ui/event-plugins": "4.0.0",
                    "@taiga-ui/i18n": "5.0.1",
                    "@taiga-ui/addon-table": "5.0.1",
                    "@taiga-ui/addon-mobile": "5.0.1",
                    "@taiga-ui/polymorpheus": "4.0.0",
                    "@taiga-ui/proprietary": "5.0.1",
                    "@taiga-ui/editor": "4.0.0"
                 }
             }
            ",
  "1. After": "
             {
                 "dependencies": {
                    "@angular/core": "~19.0.0",
                    "@maskito/angular": "^5.0.0",
                    "@maskito/core": "^5.0.0",
                    "@maskito/kit": "^5.0.0",
                    "@ng-web-apis/common": "^5.0.0",
                    "@ng-web-apis/intersection-observer": "^5.0.0",
                    "@ng-web-apis/mutation-observer": "^5.0.0",
                    "@ng-web-apis/resize-observer": "^5.0.0",
                    "@ng-web-apis/screen-orientation": "^5.0.0",
                    "@ng-web-apis/universal": "^5.0.0",
                    "@taiga-ui/cdk": "5.0.1",
                    "@taiga-ui/core": "5.0.1",
                    "@taiga-ui/icons": "5.0.1",
                    "@taiga-ui/i18n": "5.0.1",
                    "@taiga-ui/dompurify": "^5.0.0",
                    "@taiga-ui/editor": "^5.4.0",
                    "@taiga-ui/addon-table": "5.0.1",
                    "@taiga-ui/event-plugins": "^5.0.0",
                    "@taiga-ui/addon-mobile": "5.0.1",
                    "@taiga-ui/proprietary": "5.0.1",
                    "@taiga-ui/polymorpheus": "^5.0.0"
                 }
             }
            ",
}
`;

exports[`ng-update migrate packages update packages from v5 to v5: package.json 1`] = `
{
  "0. Before": "
             {
                 "dependencies": {
                    "@angular/core": "~19.0.0",
                    "@maskito/angular": "^5.0.0",
                    "@maskito/core": "^5.0.0",
                    "@maskito/kit": "^5.0.0",
                    "@ng-web-apis/common": "^5.0.0",
                    "@ng-web-apis/intersection-observer": "^5.0.0",
                    "@ng-web-apis/mutation-observer": "^5.0.0",
                    "@ng-web-apis/universal": "^5.0.0",
                    "@taiga-ui/cdk": "5.0.1",
                    "@taiga-ui/core": "5.0.1",
                    "@taiga-ui/icons": "5.0.1",
                    "@taiga-ui/dompurify": "^5.0.0",
                    "@taiga-ui/i18n": "5.0.1",
                    "@taiga-ui/event-plugins": "^5.0.0",
                    "@taiga-ui/addon-table": "5.0.1",
                    "@taiga-ui/addon-mobile": "5.0.1",
                    "@taiga-ui/polymorpheus": "^5.0.0",
                    "@taiga-ui/proprietary": "5.0.1",
                    "@taiga-ui/editor": "5.0.0"
                 }
             }
            ",
  "1. After": "
             {
                 "dependencies": {
                    "@angular/core": "~19.0.0",
                    "@maskito/angular": "^5.0.0",
                    "@maskito/core": "^5.0.0",
                    "@maskito/kit": "^5.0.0",
                    "@ng-web-apis/common": "^5.0.0",
                    "@ng-web-apis/intersection-observer": "^5.0.0",
                    "@ng-web-apis/mutation-observer": "^5.0.0",
                    "@ng-web-apis/universal": "^5.0.0",
                    "@taiga-ui/cdk": "5.0.1",
                    "@taiga-ui/core": "5.0.1",
                    "@taiga-ui/icons": "5.0.1",
                    "@taiga-ui/i18n": "5.0.1",
                    "@taiga-ui/dompurify": "^5.0.0",
                    "@taiga-ui/editor": "^5.4.0",
                    "@taiga-ui/addon-table": "5.0.1",
                    "@taiga-ui/event-plugins": "^5.0.0",
                    "@taiga-ui/addon-mobile": "5.0.1",
                    "@taiga-ui/proprietary": "5.0.1",
                    "@taiga-ui/polymorpheus": "^5.0.0"
                 }
             }
            ",
}
`;
